--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -286,25 +286,15 @@
                                     <action selector="post:" destination="UW5-WC-7xc" eventType="touchUpInside" id="7pg-pS-cQj"/>
                                 </connections>
                             </button>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wB0-h9-kMO">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <color key="barTintColor" red="0.14117647058823529" green="0.25098039215686274" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <color key="textColor" red="0.99457465280000001" green="0.99457465280000001" blue="0.99457465280000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="InstaMap" id="Ufp-E2-hrz">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Shm-tn-xjO">
-                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Post" image="Compact Camera-32" id="2XB-Af-eC9"/>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="gdN-ST-v0y">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="50z-I1-eNI">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="Vs9-fW-yNI" id="IoB-9l-I2r"/>
@@ -312,7 +302,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Gy-yV-naB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2011" y="389"/>
+            <point key="canvasLocation" x="2543" y="389"/>
         </scene>
         <!--Map-->
         <scene sceneID="llh-im-djj">
@@ -327,31 +317,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="mm9-0S-EXC">
-                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                             </mapView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dMg-5Y-6Ja">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <color key="barTintColor" red="0.14117647059999999" green="0.25098039220000001" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <color key="textColor" red="0.99457465280000001" green="0.99457465280000001" blue="0.99457465280000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="InstaMap" id="fQf-aS-JAK">
-                                        <rightBarButtonItems>
-                                            <barButtonItem systemItem="stop" id="MQc-Pr-szV">
-                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            </barButtonItem>
-                                            <barButtonItem systemItem="refresh" id="4WV-44-zfz">
-                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            </barButtonItem>
-                                        </rightBarButtonItems>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="Map Marker-32" id="Oj4-Tr-8GQ"/>
+                    <navigationItem key="navigationItem" id="fFM-E0-GVf">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="stop" id="ila-8v-J5A">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </barButtonItem>
+                            <barButtonItem systemItem="refresh" id="JqM-1r-ZE0">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="map" destination="mm9-0S-EXC" id="psc-Nc-FYU"/>
@@ -359,7 +339,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y6r-9V-1zD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2011" y="1071"/>
+            <point key="canvasLocation" x="2543" y="1071"/>
         </scene>
         <!--Feed-->
         <scene sceneID="GSt-sM-F1z">
@@ -371,7 +351,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="256" id="E9u-db-VLI" customClass="Cell" customModule="Honours_Project" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="320" height="256"/>
+                                <rect key="frame" x="0.0" y="92" width="320" height="256"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E9u-db-VLI" id="EUy-PA-ZCN">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="255"/>
@@ -409,11 +389,20 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Feed" image="Activity Feed-32" id="DtV-Ic-jyd"/>
+                    <navigationItem key="navigationItem" id="nVJ-tL-tka">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="stop" id="x6c-Tk-bp2">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </barButtonItem>
+                            <barButtonItem systemItem="refresh" id="XtG-26-CAz">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E30-py-oXX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2012" y="-274"/>
+            <point key="canvasLocation" x="2544" y="-274"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tYJ-H7-vO8">
@@ -426,9 +415,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="c7f-kn-dwE" kind="relationship" relationship="viewControllers" id="PYc-En-cK7"/>
-                        <segue destination="UW5-WC-7xc" kind="relationship" relationship="viewControllers" id="eff-DY-ugZ"/>
-                        <segue destination="sdJ-uz-5Yi" kind="relationship" relationship="viewControllers" id="HsP-iB-pKH"/>
+                        <segue destination="LLQ-EQ-rQv" kind="relationship" relationship="viewControllers" id="PYc-En-cK7"/>
+                        <segue destination="nWF-rJ-gKH" kind="relationship" relationship="viewControllers" id="eff-DY-ugZ"/>
+                        <segue destination="PyU-Sg-Z6y" kind="relationship" relationship="viewControllers" id="HsP-iB-pKH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BbV-KZ-Fz9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -502,6 +491,66 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ugM-a1-iJt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="178" y="843"/>
+        </scene>
+        <!--Feed-->
+        <scene sceneID="24O-7n-YWq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LLQ-EQ-rQv" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Feed" image="Activity Feed-32" id="DtV-Ic-jyd"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zVq-1f-aug">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.14117647059999999" green="0.25098039220000001" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="c7f-kn-dwE" kind="relationship" relationship="rootViewController" id="Sf9-d9-P7P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SfG-5z-Bgq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2012" y="-274"/>
+        </scene>
+        <!--Post-->
+        <scene sceneID="XLr-Zo-7Ud">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nWF-rJ-gKH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Post" image="Compact Camera-32" id="2XB-Af-eC9"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FEh-AL-lC3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.14117647059999999" green="0.25098039220000001" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UW5-WC-7xc" kind="relationship" relationship="rootViewController" id="QOy-Xo-ubk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="INI-VF-LfX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2011" y="389"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="VlA-0H-lrv">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PyU-Sg-Z6y" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" image="Map Marker-32" id="Oj4-Tr-8GQ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="thu-af-Qf6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.14117647059999999" green="0.25098039220000001" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sdJ-uz-5Yi" kind="relationship" relationship="rootViewController" id="cTd-w7-79O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OCh-j3-RRr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2011" y="1071"/>
         </scene>
     </scenes>
     <resources>
